tests/ui/type-alias-impl-trait/self-referential-3.stderr
error[E0275]: overflow normalizing the type alias `Bar<'a, 'b>`
  --> $DIR/self-referential-3.rs:7:31
   |
LL | fn bar<'a, 'b>(i: &'a i32) -> Bar<'a, 'b> {
   |                               ^^^^^^^^^^^
   |
   = note: in case this is a recursive type alias, consider using a struct, enum, or union instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
